<?xml version="1.0"?>
<package>
  <name>jack_msgs</name>
  <version>1.0.0</version>
  <description>jack_msgs package</description>
  <maintainer email="caleb.rascon@iimas.unam.mx">Caleb Rascon</maintainer>
  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
